# Player-replacement-finder

./: .firebaserc  .flutter-plugins  .flutter-plugins-dependencies  .gitignore  Bundesliga_Standings.csv  Cloud_Computing_Genomics_Presentation_Updated.pptx  La Liga_Squad_Defensive_Actions.csv  La Liga_Standings.csv  README.md  analysis_options.yaml  attributes_calculation.py  fbref_scrapper.py  fbref_searcher.py  final.ipynb  final.py  league_data.py  model_10-05.pkl  output.docx  player_tables.ipynb  ppt_maker.py  project_pointers.txt  pubspec.yaml  pyproject.toml  report_maker.py  requirements.txt  server.py  serverz-output.txt  similarity.py  spider.py  tm.py  transfermarkt_scraper.ipynb  updated-final.ipynb
.dart_tool/: package_config.json  package_config_subset
.idx/: integrations.json
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
data/: TIS_results.csv  merged-tm-fb_24-25.csv  overall_players_data.csv  player_data-2023-2024.csv
documents/: Comparative Analysis of Data Driven Techniques to Predict Transfer Prices of Football Players.doc  Football Player Replacement Finder.pptx  bitext.bib
experimental/: Scrape_FBref.ipynb  combined_players_data.csv  merged-tm-fb.csv
lib/: attributes_calculation.py  csv_update.py  fbref_scrapper.py  fbref_searcher.py  firebase_functions.py  league_data.py  main.dart  plotstomake.txt  server.py  standings_getter.py
linux/: CMakeLists.txt  my_application.cc
scripts/: find_similar_players.py  scrape_league_player_data.py  scrape_player_tables.py  squad.ipynb  squad_data.py  tis.py
(+866 files in other folders)
