[project]
name = "football-transfer-fees"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cloudscraper>=1.2.71",
    "matplotlib>=3.10.0",
    "numpy>=2.2.2",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "selenium>=4.29.0",
    "streamlit>=1.42.2",
]
